tests/baselines/reference/propertyAssignmentOnUnresolvedImportedSymbol.errors.txt
tests/cases/conformance/salsa/bug28576.js(1,15): error TS2307: Cannot find module 'arglebaz'.


==== tests/cases/conformance/salsa/bug28576.js (1 errors) ====
    import x from 'arglebaz'
                  ~~~~~~~~~~
!!! error TS2307: Cannot find module 'arglebaz'.
    {
        x.bar = 1
    }
    